# Hi-Wallet

./: .env.example  .gitignore  README.md  serve.py  start.sh
docs/: 2026-06-18-代码改动说明.md  AI助手实现记录.md  AI助手计划.md  THROTTLE_DESIGN.md  location_707  地图改动.md  坐标变换实现.md  坐标变换改动.md  对go2的改动.md  摄像头改动.md  改动64.md  改动65(2).md  改动65.md
src/go2_description/: CMakeLists.txt  package.xml  xacro
src/go2_web_bridge/: package.xml  setup.cfg  setup.py
src/go2_web_bridge/go2_web_bridge/: unitree_bridge_node.py
src/go2_web_bridge/launch/: dashboard.launch.py
src/ros_web_gui_app/: index.html  package-lock.json  package.json  vite.config.ts
src/ros_web_gui_app/public/go2_description/scripts/: lowstate_to_joint_states.py  pose_to_tf.py  pose_to_tf_dbg.py  pose_to_tf_dbg2.py
src/ros_web_gui_app/public/maps/: 707.pgm  707.yaml
src/ros_web_gui_app/public/tb4_description/meshes/: camera_bracket.dae  shell_collision.dae  tower.dae  tower_sensor_plate.dae  tower_standoff.dae  weight_block.dae
src/ros_web_gui_app/src/: App.css  App.tsx  index.css
src/ros_web_gui_app/src/components/: ConnectionPage.css  ConnectionPage.tsx  Go2ControlPanel.css  Go2ControlPanel.tsx  ImageDisplay.tsx  TB4ControlPanel.tsx
src/ros_web_gui_app/src/context/: FleetContext.tsx  useFleet.ts
src/ros_web_gui_app/src/hooks/: useImageLayers.ts  useOpenClawChat.ts
src/ros_web_gui_app/src/styles/: variables.css
src/ros_web_gui_app/src/types/: FleetTypes.ts  LayerConfig.ts  TopicInfo.ts
src/ros_web_gui_app/src/utils/: MapManager.ts  RosbridgeConnection.ts  StaticMapLoader.ts  WorldFrameStore.ts  colorUtils.ts  connectionPreferences.ts  layerConfigStorage.ts  mapImporter.ts  openclawApi.ts  tf2js.test.ts  tf2js.ts  topologyMapStorage.ts
(+54 files in other folders)
